RESOLVED FIXED89516
[Qt][Mac] REGRESSION(r120742): It broke the build
https://bugs.webkit.org/show_bug.cgi?id=89516
Summary [Qt][Mac] REGRESSION(r120742): It broke the build
Csaba Osztrogonác
Reported 2012-06-19 14:35:42 PDT
../../../../Source/JavaScriptCore/runtime/GCActivityCallback.cpp: In constructor ‘JSC::DefaultGCActivityCallback::DefaultGCActivityCallback(JSC::Heap*)’: ../../../../Source/JavaScriptCore/runtime/GCActivityCallback.cpp:37: error: no matching function for call to ‘JSC::GCActivityCallback::GCActivityCallback(JSC::JSGlobalData*)’ ../../../../Source/JavaScriptCore/runtime/GCActivityCallback.h:54: note: candidates are: JSC::GCActivityCallback::GCActivityCallback(JSC::JSGlobalData*, __CFRunLoop*) ../../../../Source/JavaScriptCore/runtime/GCActivityCallback.h:44: note: JSC::GCActivityCallback::GCActivityCallback(const JSC::GCActivityCallback&) Could you check it, please?
Attachments
Patch (16.04 KB, patch)
2012-06-19 15:16 PDT, Mark Hahnenberg
no flags
Patch (15.96 KB, patch)
2012-06-19 15:27 PDT, Mark Hahnenberg
no flags
Patch (16.52 KB, patch)
2012-06-19 15:35 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2012-06-19 14:40:25 PDT
Why is USE(CF) true on Qt platforms?
Mark Hahnenberg
Comment 2 2012-06-19 14:44:10 PDT
(In reply to comment #1) > Why is USE(CF) true on Qt platforms? Ah, I see, on Darwin. Okay, working on a fix for this.
Mark Hahnenberg
Comment 3 2012-06-19 15:16:10 PDT
Mark Hahnenberg
Comment 4 2012-06-19 15:27:32 PDT
Mark Hahnenberg
Comment 5 2012-06-19 15:35:56 PDT
Geoffrey Garen
Comment 6 2012-06-19 16:07:05 PDT
Comment on attachment 148442 [details] Patch r=me
WebKit Review Bot
Comment 7 2012-06-19 17:20:45 PDT
Comment on attachment 148442 [details] Patch Clearing flags on attachment: 148442 Committed r120778: <http://trac.webkit.org/changeset/120778>
WebKit Review Bot
Comment 8 2012-06-19 17:20:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.